--- a/index.ipynb
+++ b/index.ipynb
@@ -48,13 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "event = set"
+    "event = set([5, 6])"
    ]
   },
   {
@@ -72,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "prob_5_6 = None\n",
+    "prob_5_6 = Non\n",
     "prob_5_6  # 0.3333333333333333"
    ]
   },
