--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "prob_5_6 = Non\n",
+    "prob_5_6 = len(event) / len(roll)\n",
     "prob_5_6  # 0.3333333333333333"
    ]
   },
