--- a/index.ipynb
+++ b/index.ipynb
@@ -150,22 +150,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 6, 6, 2, 5, 2, 6, 3, 6, 2])"
+       "array([False,  True,  True, False,  True, False,  True, False,  True,\n",
+       "       False])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dice_10 ineve"
+    "dice_10 > 4"
    ]
   },
   {
