Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,7 @@
    },
    "outputs": [],
    "source": [
-    "event_10 = dice_10 > 4)\n",
+    "event_10 = (dice_10 > 4).sum()\n",
     "event_1k = None\n",
     "event_1m = None\n",
     "event_100m = None"
