--- a/index.ipynb
+++ b/index.ipynb
@@ -178,7 +178,7 @@
    "outputs": [],
    "source": [
     "event_10 = (dice_10 > 4).sum()\n",
-    "event_1k = None\n",
+    "event_1k = dice_1k > 4 .sum()\n",
     "event_1m = None\n",
     "event_100m = None"
    ]
