Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -178,8 +178,8 @@
    "outputs": [],
    "source": [
     "event_10 = (dice_10 > 4).sum()\n",
-    "event_1k = dice_1k > 4 .sum()\n",
-    "event_1m = None\n",
+    "event_1k = (dice_1k > 4).sum()\n",
+    "event_1m = (dice)\n",
     "event_100m = None"
    ]
   },
