Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,16 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "event_10 = (dice_10 > 4).sum()\n",
     "event_1k = (dice_1k > 4).sum()\n",
     "event_1m = (dice_1m > 4).sum()\n",
-    "event_100m = (dice_100)"
+    "event_100m = (dice_100m > 4).sum()"
    ]
   },
   {
