--- a/index.ipynb
+++ b/index.ipynb
@@ -299,6 +299,7 @@
    "outputs": [],
    "source": [
     "def check_axioms(sample_space):\n",
+    "    for s in sample\n",
     "    None"
    ]
   },
