--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,8 @@
    "outputs": [],
    "source": [
     "def check_axioms(sample_space):\n",
-    "    for s in sample\n",
+    "    for s in sample_space:\n",
+    "        if s < 0: \n",
     "    None"
    ]
   },
