Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,9 @@
    "source": [
     "def check_axioms(sample_space):\n",
     "    for s in sample_space:\n",
-    "        if s < 0: print(\"Not quite!\")\n",
+    "        if s < 0: \n",
+    "            print(\"Not quite!\")\n",
+    "            break\n",
     "    None"
    ]
   },
