--- a/index.ipynb
+++ b/index.ipynb
@@ -303,7 +303,7 @@
     "        if s < 0: \n",
     "            print(\"Not quite!\")\n",
     "            break\n",
-    "    if sum()"
+    "    if sum(sample_space) != 1"
    ]
   },
   {
