Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -303,7 +303,8 @@
     "        if s < 0: \n",
     "            print(\"Not quite!\")\n",
     "            break\n",
-    "    if sum(sample_space) != 1"
+    "    if sum(sample_space) != 1:\n",
+    "        print('Not quite!')"
    ]
   },
   {
