--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,8 @@
     "            print(\"Not quite!\")\n",
     "            break\n",
     "    if sum(sample_space) != 1:\n",
-    "        print('Not quite!')"
+    "        print('Not quite!')\n",
+    "    "
    ]
   },
   {
