Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -302,10 +302,11 @@
     "    for s in sample_space:\n",
     "        if s < 0: \n",
     "            print(\"Not quite!\")\n",
-    "            break\n",
+    "            return None\n",
     "    if sum(sample_space) != 1:\n",
     "        print('Not quite!')\n",
-    "    "
+    "        return None\n",
+    "    print "
    ]
   },
   {
