Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,7 @@
     "    if sum(sample_space) != 1:\n",
     "        print('Not quite!')\n",
     "        return None\n",
-    "    print "
+    "    print (\"We're good\")"
    ]
   },
   {
