Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,10 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def check_axioms(sample_space):\n",
@@ -306,7 +304,7 @@
     "    if sum(sample_space) != 1:\n",
     "        print('Not quite!')\n",
     "        return None\n",
-    "    print (\"We're good\")"
+    "    print (\"We're good!\")"
    ]
   },
   {
@@ -318,11 +316,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We're good!\n"
+     ]
+    }
+   ],
    "source": [
     "check_axioms(continents)"
    ]
