--- a/index.ipynb
+++ b/index.ipynb
@@ -359,9 +359,9 @@
    },
    "outputs": [],
    "source": [
-    "check_axioms(tes)\n",
-    "None\n",
-    "None"
+    "check_axioms(test_1)\n",
+    "check_axioms(test_2)\n",
+    "check_axioms(test_1)"
    ]
   },
   {
