--- a/index.ipynb
+++ b/index.ipynb
@@ -340,10 +340,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_1 = np.array([0.05, 0.2, 0.3, 1.01])\n",
@@ -353,15 +351,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not quite!\n",
+      "Not quite!\n",
+      "Not quite!\n"
+     ]
+    }
+   ],
    "source": [
     "check_axioms(test_1)\n",
     "check_axioms(test_2)\n",
-    "check_axioms(test_1)"
+    "check_axioms(test_3)"
    ]
   },
   {
