--- a/index.ipynb
+++ b/index.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
    },
    "outputs": [],
    "source": [
-    "None # should be equal to (36,2)"
+    "sample_d # should be equal to (36,2)"
    ]
   },
   {
