--- a/index.ipynb
+++ b/index.ipynb
@@ -470,7 +470,7 @@
    },
    "outputs": [],
    "source": [
-    "set_5 = sample_dicc # Your output should be shape (36, 2) but with booleans instead of numbers"
+    "set_5 = sample_dice == 5 # Your output should be shape (36, 2) but with booleans instead of numbers"
    ]
   },
   {
