--- a/index.ipynb
+++ b/index.ipynb
@@ -514,7 +514,7 @@
    },
    "outputs": [],
    "source": [
-    "prob_5 = sum(np.any())\n",
+    "prob_5 = sum(np.any(sample_dice == 5))\n",
     "print(prob_5)"
    ]
   },
