Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -508,13 +508,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
-    "prob_5 = sum(np.any(sample_dice == 5, axis=1))\n",
+    "prob_5 = sum(np.any(sample_dice == 5, axis=1)) / len(sam)\n",
     "print(prob_5)"
    ]
   },
