Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -540,7 +540,7 @@
    "outputs": [],
    "source": [
     "set_5 = sum(np.any(sample_dice == 5, axis=1)) / len(sample_dice)\n",
-    "set_6 = None"
+    "set_6 = sum(np.any(sample_dice))"
    ]
   },
   {
