Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -533,22 +533,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "set_5 = sum(np.any(sample_dice == 5, axis=1)) / len(sample_dice)\n",
+    "set_5 = sample_dice == 5, axis=1)) / len(sample_dice)\n",
     "set_6 = sum(np.any(sample_dice == 6, axis=1)) / len(sample_dice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "set_5_6 = set_5 + set_6"
