--- a/index.ipynb
+++ b/index.ipynb
@@ -533,17 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_5 = sample_dice == 5, axis=1)) / len(sample_dice)\n",
-    "set_6 = sum(np.any(sample_dice == 6, axis=1)) / len(sample_dice)"
+    "set_5 = sample_dice == 5\n",
+    "set_6 = sample_dice == 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
