Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -552,6 +552,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False,  True],\n",
+       "       [False,  True],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False,  True],\n",
+       "       [False,  True],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False,  True],\n",
+       "       [False,  True],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False,  True],\n",
+       "       [False,  True],\n",
+       "       [ True, False],\n",
+       "       [ True, False],\n",
+       "       [ True, False],\n",
+       "       [ True, False],\n",
+       "       [ True,  True],\n",
+       "       [ True,  True],\n",
+       "       [ True, False],\n",
+       "       [ True, False],\n",
+       "       [ True, False],\n",
+       "       [ True, False],\n",
+       "       [ True,  True],\n",
+       "       [ True,  True]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_5_6"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
