Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -547,7 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_5_6 = set_5 + set_6"
+    "set_5_6 = set_5 + set_6)"
    ]
   },
   {
