--- a/index.ipynb
+++ b/index.ipynb
@@ -543,60 +543,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_5_6 = set_5 + set_6)"
+    "set_5_6 = (set_5 + set_6).any(axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[False, False],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False,  True],\n",
-       "       [False,  True],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False,  True],\n",
-       "       [False,  True],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False,  True],\n",
-       "       [False,  True],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False, False],\n",
-       "       [False,  True],\n",
-       "       [False,  True],\n",
-       "       [ True, False],\n",
-       "       [ True, False],\n",
-       "       [ True, False],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True],\n",
-       "       [ True, False],\n",
-       "       [ True, False],\n",
-       "       [ True, False],\n",
-       "       [ True, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True]])"
+       "array([False, False, False, False,  True,  True, False, False, False,\n",
+       "       False,  True,  True, False, False, False, False,  True,  True,\n",
+       "       False, False, False, False,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
