--- a/index.ipynb
+++ b/index.ipynb
@@ -618,7 +618,7 @@
    },
    "outputs": [],
    "source": [
-    "sum_dice = sum()\n",
+    "sum_dice = sum(sample_dice)\n",
     "sum_8 = None"
    ]
   },
