Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -618,7 +618,7 @@
    },
    "outputs": [],
    "source": [
-    "sum_dice = np.sum(sample_dice)\n",
+    "sum_dice = sum(sample_dice)\n",
     "sum_8 = None"
    ]
   },
