--- a/index.ipynb
+++ b/index.ipynb
@@ -612,14 +612,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sum_dice = np.sum(sample_dice, axis=1)\n",
-    "sum_8 = None"
+    "sum_8 = sum_dice == 8"
    ]
   },
   {
