--- a/index.ipynb
+++ b/index.ipynb
@@ -628,7 +628,7 @@
    },
    "outputs": [],
    "source": [
-    "prob_sum_8 = None\n",
+    "prob_sum_8 = sum_8 / len()\n",
     "print(prob_sum_8)"
    ]
   },
